--- a/src/pages/Landing/index.scss
+++ b/src/pages/Landing/index.scss
@@ -20,17 +20,6 @@
     padding: 15px 20%;
     margin-top: 50px;
 
-    .cart-div {
-      position: relative;
-      .cart-length {
-        position: absolute;
-        color: $primary-white;
-        font-size: 20px;
-        top: 18px;
-        right: 33px;
-      }
-    }
-
     .card-container {
       display: grid;
       grid-template-columns: repeat(3, 30%);
@@ -58,6 +47,12 @@
           .card-text {
             font-size: 14px;
             margin-bottom: 0;
+
+            &.price {
+              color: green;
+              font-size: 24px;
+              font-weight: bold;
+            }
           }
         }
 
@@ -65,6 +60,60 @@
           box-shadow: 1px 2px 3px 3px rgba(0, 0, 0, 0.2);
           cursor: pointer;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .products {
+    .navbar {
+      padding: 10px 20px !important;
+      height: fit-content !important;
+    }
+
+    .products-container {
+      padding: 20px !important;
+      margin-top: 60px !important;
+
+      .card-container {
+        grid-template-columns: repeat(3, 30%) !important;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .products {
+    .navbar {
+      padding: 10px 20px !important;
+      height: fit-content !important;
+    }
+
+    .products-container {
+      padding: 20px !important;
+      margin-top: 60px !important;
+
+      .card-container {
+        grid-template-columns: repeat(2, 47%) !important;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .products {
+    .navbar {
+      padding: 10px 20px !important;
+      height: fit-content !important;
+    }
+
+    .products-container {
+      padding: 20px !important;
+      margin-top: 60px !important;
+
+      .card-container {
+        grid-template-columns: repeat(1, 100%) !important;
       }
     }
   }
