--- a/src/pages/Order/index.scss
+++ b/src/pages/Order/index.scss
@@ -20,6 +20,14 @@
     padding: 15px 20%;
     margin-top: 50px;
 
+    .hide-lg {
+      display: none;
+    }
+
+    .hide-table-sm {
+      display: table;
+    }
+
     th {
       white-space: nowrap;
     }
@@ -50,5 +58,109 @@
     align-items: center;
     padding: 0 20%;
     border-top: 1px solid $primary-color;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .orders {
+    .btn-fit-content {
+      width: fit-content;
+      flex: 1;
+    }
+    .navbar {
+      padding: 10px 20px !important;
+      height: fit-content !important;
+
+      .navbar-brand {
+        color: $primary-white;
+      }
+    }
+
+    .order-container {
+      padding: 15px 20px;
+      margin-top: 61px;
+
+      .hide-lg {
+        display: grid;
+      }
+
+      .hide-table-sm {
+        display: none;
+      }
+
+      .card-container {
+        grid-template-columns: repeat(1, 100%) !important;
+        padding: 0 !important;
+        margin-bottom: 50px;
+
+        &.hide-lg {
+          display: grid;
+        }
+
+        .card {
+          margin-bottom: 20px;
+
+          &.product-card {
+            min-width: 100%;
+            max-width: fit-content;
+            width: fit-content;
+
+            .card-body {
+              padding: 10px 10px 0;
+
+              .product-card-img-container {
+                .product-card-img {
+                  width: 75px;
+                  height: 75px;
+                  border-radius: 100%;
+                }
+              }
+
+              .details-container {
+                padding: 0 10px;
+              }
+            }
+
+            .card-text {
+              color: #555;
+              margin-bottom: 5px;
+              font-size: 14px;
+
+              &.price {
+                font-weight: bold;
+                color: green;
+              }
+            }
+
+            .card-footer {
+              height: 50px;
+
+              .edit,
+              .delete {
+                width: 40px;
+                height: 40px;
+              }
+
+              .edit {
+                border: 2px solid $primary-color;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .footer {
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+      background-color: $primary-white;
+      height: 50px;
+      display: flex;
+      justify-content: center !important;
+      align-items: center;
+      padding: 0 !important;
+      border-top: 1px solid $primary-color;
+    }
   }
 }
